--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DBUSER="m001"
-DBPASSWORD="m001"
-DBHOSTNAME="servidor5d.jomrw5l.mongodb.net"
-DBNAME="Integradora"
+DBUSER="M001"
+DBPASSWORD="M001"
+DBHOSTNAME="clusterdiegoivan.ewwdp2k.mongodb.net"
+DBNAME="ejemplo"
