--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DBUSER="M001"
 DBPASSWORD="M001"
-DBHOSTNAME="clusterdiegoivan.ewwdp2k.mongodb.net"
+DBHOSTNAME="cluster5d-cgh.kqqkfww.mongodb.net"
 DBNAME="ejemplo"
